@@ -150,6 +150,7 @@ SelectorGadget.prototype.sg_click = function(e) {
   var gadget = e.data.self;
   if (gadget.unbound) return true;
   var elem = this;
+  var w_elem = jQuery(elem);
   if (elem == document.body || elem == document.body.parentNode) return;
   //window.getSelection().removeAllRanges();
   
@@ -162,17 +163,17 @@ SelectorGadget.prototype.sg_click = function(e) {
     if (jQuery('.sg_selected', this).get(0)) return; // Don't allow selection of elements that have a selected child.
   }
   
-  if (jQuery(elem).hasClass('sg_selected')) {
-    jQuery(elem).removeClass('sg_selected');
+  if (w_elem.hasClass('sg_selected')) {
+    w_elem.removeClass('sg_selected');
     gadget.selected.splice(jQuery.inArray(elem, gadget.selected), 1);
-  } else if (jQuery(elem).hasClass("sg_rejected")) {
-    jQuery(elem).removeClass('sg_rejected');
+  } else if (w_elem.hasClass("sg_rejected")) {
+    w_elem.removeClass('sg_rejected');
     gadget.rejected.splice(jQuery.inArray(elem, gadget.rejected), 1);
-  } else if (jQuery(elem).hasClass("sg_suggested")) {
-    jQuery(elem).addClass('sg_rejected');
+  } else if (w_elem.hasClass("sg_suggested")) {
+    w_elem.addClass('sg_rejected');
     gadget.rejected.push(elem);
   } else {
-    jQuery(elem).addClass('sg_selected');
+    w_elem.addClass('sg_selected');
     gadget.selected.push(elem);
   }
 
@@ -182,13 +183,15 @@ SelectorGadget.prototype.sg_click = function(e) {
   gadget.setPath(prediction);
   gadget.removeBorders();
 
+  gadget.blockClicksOn(elem);
+
   return false;
 };
 
 SelectorGadget.prototype.setupEventHandlers = function() {
   jQuery("*:not(.sg_ignore)").bind("mouseover.sg", { 'self': this }, this.sg_mouseover);
   jQuery("*:not(.sg_ignore)").bind("mouseout.sg", { 'self': this }, this.sg_mouseout);
-  jQuery("*:not(.sg_ignore)").bind("click.sg", { 'self': this }, this.sg_click);
+  jQuery("*:not(.sg_ignore)").bind("mousedown.sg", { 'self': this }, this.sg_click);
   jQuery("html").bind("keydown.sg", { 'self': this }, this.listen_for_action_keys);
   jQuery("html").bind("keyup.sg", { 'self': this }, this.clear_action_keys);
 };
@@ -218,6 +221,17 @@ SelectorGadget.prototype.clear_action_keys = function(e) {
   if (gadget.unbound) return true;
   gadget.removeBorders();
   gadget.special_mode = null;
+};
+
+// Block clicks for a moment by covering this element with a div.  Eww?
+SelectorGadget.prototype.blockClicksOn = function(elem) {
+  var elem = jQuery(elem);
+  var p = elem.offset();
+  var block = jQuery('<div>').css('position', 'absolute').css('z-index', '9999999').css('width', this.px(elem.outerWidth())).
+                              css('height', this.px(elem.outerHeight())).css('top', this.px(p.top)).css('left', this.px(p.left)).
+                              css('background-color', '');
+  document.body.appendChild(block.get(0));
+  setTimeout(function() { block.remove(); },250)  
 };
 
 SelectorGadget.prototype.setMode = function(mode) {
