@@ -1,5 +1,6 @@
 Release 0.3.3
   - block highlighting of the ancestors of selected elements
+  - better blocking of click events
 Release 0.3.2 12/04/08
   - better tag naming
   - removal of interface clutter
